fixing vertical scrollbar always active

--- a/pagesource/assets/css/base.css
+++ b/pagesource/assets/css/base.css
@@ -58,7 +58,6 @@ body {
 }
 
 .page-title {
-  padding: 0px;
   margin-top: -21px;
   color: inherit;
   background-color: #ecf0f1;
